--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.projectKey=pangolin-do-golang_thumb-processor-api
 
 sonar.projectName=thumb-processor-api
 
-sonar.exclusions=**/mocks/**,**/deploy/**,**/docs/**,**/cmd/**
+sonar.exclusions=**/mocks/**,**/deploy/**,**/docs/**,**/cmd/**,**/internal/adapters/rest/server/**
  
 sonar.test.inclusions=**/*_test.go
 sonar.go.coverage.reportPaths=/github/workspace/coverage.out
